--- a/calculator.html
+++ b/calculator.html
@@ -11,6 +11,11 @@ function cube() {
 <h1>Calculadora de Victor Amaro</h1>
  Number:
  <input type="text" id="n1">
-  <button onclick="cube()"> x^3 </button>
+  <button onclick="cuarta()"> x^4 </button>
+function cube() {
+ var num = document.getElementById("n1");
+ num.value = Math.pow(num.value, 4);
+}
+
 </body>
 </html>
