--- a/calculator.html
+++ b/calculator.html
@@ -12,10 +12,14 @@ function cube() {
  Number:
  <input type="text" id="n1">
   <button onclick="cuarta()"> x^4 </button>
-function cube() {
+function cuarta() {
  var num = document.getElementById("n1");
  num.value = Math.pow(num.value, 4);
 }
+<button onclick="sine()"> sin(x) </button>
 
+function sine() {
+ var num = document.getElementById("n1");
+ num.value = Math.sin(num.value);
 </body>
 </html>
