--- a/calculator.html
+++ b/calculator.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head>
+<!DOCTYPE html><html>
 <title>Calculator</title><meta charset="utf-8">
 <script type="text/javascript">
 function cube() {
@@ -6,7 +6,7 @@ function cube() {
  num.value = Math.pow(num.value, 3);
 }
 </script>
-</head>
+
 <body>
 <h1>Calculadora de Victor Amaro</h1>
  Number:
